Bug 94370 - Very slow previewing of (or blank, invisible..) master pages - resizing panel refreshes them instantly
Summary: Very slow previewing of (or blank, invisible..) master pages - resizing panel...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.0.1.2 release
Hardware: All All
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.2.0 target:5.1.2 target:5.0.6
Keywords: bibisected, bisected, perf, regression
: 94894 95299 95751 98096 98432 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-20 03:46 UTC by Petr Valach
Modified: 2016-10-25 19:03 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Petr Valach 2015-09-20 03:46:16 UTC
In last version of LibreOffice - 5.0.1 - you can see veeery slow previewing templates, especially in Impress. It doesn't matter if you have 5 or 200 templates. Previewing is horrible slow. And I checked it on Windows 7 and LinuxMint.
Comment 1 Buovjaga 2015-09-20 16:28:57 UTC
In the start screen I went to templates and looked at the preview thumbnails. Nothing strange observed. I mostly have the default templates, though.
Do you observe this also, if you move your templates temporarily to somewhere where LibreOffice cannot find them?

Win 7 Pro 64-bit, Version: 5.0.1.2 (32-bit)
Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Locale: fi-FI (fi_FI)

Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided the information.
Comment 2 Petr Valach 2015-09-20 17:07:45 UTC
(In reply to Beluga from comment #1)
> In the start screen I went to templates and looked at the preview
> thumbnails. Nothing strange observed. I mostly have the default templates,
> though.
> Do you observe this also, if you move your templates temporarily to
> somewhere where LibreOffice cannot find them?
> 
> Win 7 Pro 64-bit, Version: 5.0.1.2 (32-bit)
> Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
> Locale: fi-FI (fi_FI)
> 
> Set to NEEDINFO.
> Change back to UNCONFIRMED after you have provided the information.

Just try sidebar, there is problem. You can move templates to local installation folder or personal, problem will occur.
Comment 3 Buovjaga 2015-09-20 18:02:13 UTC
Ok so you mean master pages.

I can repro. With 4.3.0.1 the problem does not exist.

There was also this bug 92935, but now the crash is gone.

Win 7 Pro 64-bit, Version: 5.0.1.2 (32-bit)
Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Locale: fi-FI (fi_FI)

Version: 5.1.0.0.alpha1+ (x64)
Build ID: 9ce08dcc2e32c5554ddf71b79173f8854e0568ad
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-09-17_21:43:51
Locale: en-US (fi_FI)
Comment 4 Petr Valach 2015-09-20 18:09:29 UTC
(In reply to Beluga from comment #3)
> Ok so you mean master pages.
> 
> I can repro. With 4.3.0.1 the problem does not exist.
> 
> There was also this bug 92935, but now the crash is gone.
> 
> Win 7 Pro 64-bit, Version: 5.0.1.2 (32-bit)
> Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
> Locale: fi-FI (fi_FI)
> 
> Version: 5.1.0.0.alpha1+ (x64)
> Build ID: 9ce08dcc2e32c5554ddf71b79173f8854e0568ad
> TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-09-17_21:43:51
> Locale: en-US (fi_FI)

Exactly. In older version problem doesn't occur. And you can use only few templates - and there it was.
Comment 5 m.a.riosv 2015-10-25 23:24:16 UTC
*** Bug 95299 has been marked as a duplicate of this bug. ***
Comment 6 Katarina Behrens (Inactive) 2015-11-05 22:05:04 UTC
*** Bug 94894 has been marked as a duplicate of this bug. ***
Comment 7 Buovjaga 2015-11-12 13:05:12 UTC
*** Bug 95751 has been marked as a duplicate of this bug. ***
Comment 8 Buovjaga 2015-11-12 13:06:16 UTC
New info from dupe: We resize size of side panel - they are rendered
Comment 9 Robinson Tryon (qubit) 2015-12-14 05:32:34 UTC Comment hidden (obsolete)
Comment 10 raal 2015-12-15 08:14:43 UTC
This seems to have begun at the below commit.
Adding Cc: to Tomaž Vajngerl ; Could you possibly take a look at this one?
Thanks
 8eaa307f895b522a921a02a76172127e0186a8f0 is the first bad commit
commit 8eaa307f895b522a921a02a76172127e0186a8f0
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Jun 4 04:27:39 2015 -0500

    source 2fa44119c802c39c4871e77726c01e6ba62a6262

    source 2fa44119c802c39c4871e77726c01e6ba62a6262

:040000 040000 5fac56955050feba4cc0a94b66f21f59577a5250 1b3206f4b8f60c767cbb5e0494faadfaf138454d M      instdir

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2015-05-11 08:55:36 (GMT)
committer	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2015-05-11 08:57:29 (GMT)
commit 2fa44119c802c39c4871e77726c01e6ba62a6262 (patch)
refactor ValueSet to use RenderContext
Comment 11 Cor Nouws 2015-12-15 12:55:53 UTC
adapting the summary a bit: on Linux I don't see any master page preview.
Comment 12 Petr Valach 2016-01-31 05:36:18 UTC
This problem persist in version 5.1.3. Even if you rename your user folder of LibreOffice in /home. But if you change view of list of template (small/large), preview appear.

We do website openoffice.cz and we cannot recommend product with such silly mistake. Please, repair it. Thank you.
Comment 13 raal 2016-02-23 14:03:59 UTC
*** Bug 98096 has been marked as a duplicate of this bug. ***
Comment 14 Yousuf Philips (jay) (retired) 2016-02-23 17:57:57 UTC
My duplicate report was created after i saw a video tutorial showing the problem, where in the tutorial author refreshed it by clicking on another sidebar tab and then back on master pages.

This should be an easy fix to have the tab contents refreshed.
Comment 15 Cor Nouws 2016-03-07 10:15:09 UTC
*** Bug 98432 has been marked as a duplicate of this bug. ***
Comment 16 Katarina Behrens (Inactive) 2016-03-10 12:39:34 UTC
I've read about this bug on openoffice.cz (you know, I can read some Czech :)) and it was really obvious that it pisses OP off horribly, so that was the ultimate motivation to fix it
Comment 17 Commit Notification 2016-03-10 13:30:53 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b98d7a3c4f1de39226e44e5b27351d8bfbbe6c0

tdf#94370: Make previews of master pages finally appear

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2016-03-14 19:11:38 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=819166500c1b45e4241fdb47f2de6653e4495372&h=libreoffice-5-1

tdf#94370: Make previews of master pages finally appear

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Yan Pas 2016-03-14 22:28:16 UTC
Send fix to 5.0.6 / 5.0.7 please too :)
Comment 20 Yousuf Philips (jay) (retired) 2016-03-15 00:46:30 UTC
Version: 5.2.0.0.alpha0+
Build ID: 053103915717e41436b7a397d9cfa3ea0e3519cc
CPU Threads: 2; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-03-11_12:52:46
Locale: en-US (en_US.UTF-8)

Cherry-picked for 5.0
https://gerrit.libreoffice.org/#/c/23253/
Comment 21 Commit Notification 2016-03-15 10:53:14 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71f4f7fc85fbc872cd480613e95530f122f530f8&h=libreoffice-5-0

tdf#94370: Make previews of master pages finally appear

It will be available in 5.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Petr Valach 2016-05-16 18:29:04 UTC
I have the same proble til now, LO 5.1.3, LinuxMint & Windows 7. Not only one computer.

http://img7.pixhost.org/images/439/32737383_19.jpg

I must move with sidebar to view thumbnails of templates.
Comment 23 Katarina Behrens (Inactive) 2016-05-17 08:10:44 UTC
(In reply to Petr Valach from comment #22)
> I have the same proble til now, LO 5.1.3, LinuxMint & Windows 7. Not only
> one computer.
> 
> http://img7.pixhost.org/images/439/32737383_19.jpg

Oh, interesting. It works for me (and obviously for Jay too, as he verified the bug) but all I have is a development build so of course my set of master slides is entirely different (and much smaller) than yours. 

Can you perhaps tell any difference between those master slides that do display and those that don't? (such as - those that display come from the main libreoffice package and the rest from an extension?)
Comment 24 Buovjaga 2016-05-17 09:10:35 UTC
(In reply to Petr Valach from comment #22)
> I have the same proble til now, LO 5.1.3, LinuxMint & Windows 7. Not only
> one computer.
> 
> http://img7.pixhost.org/images/439/32737383_19.jpg
> 
> I must move with sidebar to view thumbnails of templates.

No problem for me, don't have to resize sidebar.

Note that I could reproduce it in comment 3.

Win 7 Pro 64-bit, Version: 5.1.3.2 (x64)
Build ID: 644e4637d1d8544fd9f56425bd6cec110e49301b
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: fi-FI (fi_FI)
Comment 25 Petr Valach 2016-05-17 09:45:13 UTC
(In reply to Katarina Behrens (CIB) from comment #23)
> (In reply to Petr Valach from comment #22)
> > I have the same proble til now, LO 5.1.3, LinuxMint & Windows 7. Not only
> > one computer.
> > 
> > http://img7.pixhost.org/images/439/32737383_19.jpg
> 
> Oh, interesting. It works for me (and obviously for Jay too, as he verified
> the bug) but all I have is a development build so of course my set of master
> slides is entirely different (and much smaller) than yours. 
> 
> Can you perhaps tell any difference between those master slides that do
> display and those that don't? (such as - those that display come from the
> main libreoffice package and the rest from an extension?)

I converted some templates from PowerPoint templates, the rest is from free sources for LibreOffice.
Comment 26 Katarina Behrens (Inactive) 2016-05-17 09:54:06 UTC
> I converted some templates from PowerPoint templates, the rest is from free
> sources for LibreOffice.

In that case, please file a new bug and if possible, attach one of those 'bad' templates to it. Also please mention in the new report whether those templates are stored in the same directory as the 'good' ones or somewhere else
Comment 27 Petr Valach 2016-05-18 14:26:58 UTC
(In reply to Katarina Behrens (CIB) from comment #26)
> > I converted some templates from PowerPoint templates, the rest is from free
> > sources for LibreOffice.
> 
> In that case, please file a new bug and if possible, attach one of those
> 'bad' templates to it. Also please mention in the new report whether those
> templates are stored in the same directory as the 'good' ones or somewhere
> else

It's OK. I moved templates from /usr/lib/libreoffice/share/template/common/layout to local configuration personal folder and changed rights.

Thank you.