tdf#94370: Make previews of master pages finally appear

Just force the whole ValueSet to be formatted. Individual rectangles
are already being invalidated (when PREVIEW_CHANGED event comes), but
something naughty must be happening in ValueSet that those changes
don't show.

Change-Id: I4fd8af36e34c3a445d7b16b59e45256f016fd9df
Reviewed-on: https://gerrit.libreoffice.org/23115
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 1b98d7a3c4f1de39226e44e5b27351d8bfbbe6c0)